<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <group android:checkableBehavior="single"

        >
        <item android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home"/>
        <item android:id="@+id/nav_learing"
            android:title="@string/nav_learning"
            android:icon="@drawable/ic_learning"/>
        <item android:id="@+id/nav_products"
            android:title="@string/nav_products"
            android:icon="@drawable/ic_products"/>
<!--        <item android:id="@+id/nav_story"-->
<!--            android:title="@string/nav_story"-->
<!--            android:icon="@drawable/ic_story"/>-->
        <item android:id="@+id/nav_blog"
            android:title="@string/nav_blog"
            android:icon="@drawable/ic_blog"/>
<!--        <item android:id="@+id/nav_about"-->
<!--            android:title="@string/nav_about"-->
<!--            android:icon="@drawable/ic_about"/>-->

        <item android:id="@+id/nav_my_profile"
            android:title="@string/nav_my_profile"
            android:icon="@drawable/ic_my_profile"/>
        <item android:id="@+id/nav_change_password"
            android:title="@string/nav_change_password"
            android:icon="@drawable/ic_password_reset"/>
        <item android:id="@+id/nav_sign_out"
            android:title="@string/nav_sign_out"
            android:icon="@drawable/ic_logout"/>
<!--        <item android:title="Account">-->
<!--            <menu>-->
<!--                <item android:id="@+id/nav_my_profile"-->
<!--                    android:title="@string/nav_my_profile"-->
<!--                    android:icon="@drawable/ic_my_profile"/>-->
<!--                <item android:id="@+id/nav_change_password"-->
<!--                    android:title="@string/nav_change_password"-->
<!--                    android:icon="@drawable/ic_password_reset"/>-->
<!--                <item android:id="@+id/nav_sign_out"-->
<!--                    android:title="@string/nav_sign_out"-->
<!--                    android:icon="@drawable/ic_logout"/>-->
<!--            </menu>-->
<!--        </item>-->
    </group>


</menu>